--- a/app/src/main/res/layout/activity_single_customer.xml
+++ b/app/src/main/res/layout/activity_single_customer.xml
@@ -144,18 +144,19 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="92dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="65dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="18dp"
         android:text="F-Name :"
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewLName"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toLeftOf="@+id/textViewFName"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFName"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView12"
@@ -220,7 +221,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="25dp"
-        android:text="TextView"
+        android:text="Rs."
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buttonAddPurchase"
