--- a/app/src/main/res/layout/activity_single_customer.xml
+++ b/app/src/main/res/layout/activity_single_customer.xml
@@ -197,11 +197,11 @@
         tools:layout_constraintRight_creator="1" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/txtViewTotalBaki"
         android:layout_width="125dp"
         android:layout_height="39dp"
         android:layout_marginBottom="37dp"
-        android:text="Total BAKI :"
+        android:text="Total BAKI Rs.:"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buttonAddPurchase"
         app:layout_constraintHorizontal_bias="0.0"
@@ -210,29 +210,5 @@
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
-
-    <TextView
-        android:id="@+id/textViewRemainingAmoutn"
-        android:layout_width="0dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="34dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginLeft="19dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="25dp"
-        android:text="Rs."
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAddPurchase"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/textView18"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
