Total_Baki Done

--- a/app/src/main/res/layout/activity_single_customer.xml
+++ b/app/src/main/res/layout/activity_single_customer.xml
@@ -8,60 +8,53 @@
 
     <TextView
         android:id="@+id/textViewFName"
-        android:layout_width="224dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="77dp"
+        android:layout_width="137dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="81dp"
         android:text="First Name"
         android:textAlignment="textStart"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView13"
+        app:layout_constraintRight_toRightOf="@+id/textViewCustomerId"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.708"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewLName"
-        app:layout_constraintVertical_bias="0.428" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textViewLName"
-        android:layout_width="258dp"
+        android:layout_width="145dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="Last Name"
         android:textAlignment="textStart"
-        android:textSize="24sp"
-        tools:layout_constraintRight_creator="1"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFName"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textViewAddress"
-        android:layout_marginBottom="13dp" />
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/textViewAddress"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="188dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="4dp"
         android:text="Address"
         android:textAlignment="textStart"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAddPurchase"
-        app:layout_constraintHorizontal_bias="0.783"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtViewTotalBakii"
+        app:layout_constraintLeft_toRightOf="@+id/textView7"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLName"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
     <Button
@@ -100,89 +93,72 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="146dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="16dp"
-        android:text="Account of"
-        android:textAlignment="center"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="18dp"
+        android:text="Account Information"
+        android:textAlignment="textStart"
         android:textSize="18sp"
         android:textStyle="bold|italic"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/textViewCustomerId" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="9dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:text="ID :"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewFName"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         app:layout_constraintVertical_bias="0.296"
-        android:layout_marginStart="16dp"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1" />
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textViewCustomerId"
         android:layout_width="231dp"
         android:layout_height="23dp"
         android:layout_marginLeft="17dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/textView7"
         android:layout_marginStart="17dp"
+        android:text="TextView"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
+        app:layout_constraintLeft_toRightOf="@+id/textView7"
         tools:layout_constraintBaseline_creator="1" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="18dp"
-        android:text="F-Name :"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toLeftOf="@+id/textViewFName"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginStart="16dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textViewLName"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="7dp"
-        app:layout_constraintTop_toTopOf="@+id/textViewFName" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
-        android:text="L-Name :"
+        android:text="Name :"
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textViewLName"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        app:layout_constraintRight_toLeftOf="@+id/textViewFName"
+        app:layout_constraintTop_toTopOf="@+id/textViewFName"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewLName" />
 
     <TextView
         android:id="@+id/textView13"
@@ -195,66 +171,106 @@
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginTop="13dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/txtViewTotalBakii"
         android:layout_width="0dp"
-        android:layout_height="39dp"
-        android:text="Total P_AMT :"
+        android:layout_height="35dp"
+        android:layout_marginBottom="27dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="16dp"
+        android:text="Total Purchase_AMT : Rs."
         android:textStyle="bold"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toLeftOf="@+id/txtViewTotalBaki"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="21dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewTotalBaki"
-        tools:layout_constraintBaseline_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBaki"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.486" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/txtViewTotalBaki"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="27dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
+        android:layout_width="108dp"
+        android:layout_height="29dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/txtViewTotalBakii"
+        app:layout_constraintRight_toLeftOf="@+id/textViewLName"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textViewAddress" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="BAKI :"
-        app:layout_constraintRight_toLeftOf="@+id/textView23"
-        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAddPurchase"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginTop="39dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtViewTotalBakii" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewTotalBakii" />
 
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/textViewBaki"
+        android:layout_width="235dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="224dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:text="BAKI"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView18"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="229dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Total BAKI : Rs."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <TextView
+        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BAKI"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="21dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
+        android:text="Today Given AMT :"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTodayGivenAMT"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintLeft_toRightOf="@+id/txtViewTotalBakii" />
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTodayGivenAMT"
+        android:layout_width="146dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="110dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonAddPurchase"
+        app:layout_constraintLeft_toRightOf="@+id/textView12"
+        tools:layout_constraintBottom_creator="1" />
+
+    <Button
+        android:id="@+id/buttonOK"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:text="OK"
+        app:layout_constraintLeft_toRightOf="@+id/editTextTodayGivenAMT"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonViewAllPurchases"
+        android:layout_marginTop="169dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        android:layout_marginBottom="169dp" />
 
 </android.support.constraint.ConstraintLayout>
