--- a/app/src/main/res/layout/activity_single_customer.xml
+++ b/app/src/main/res/layout/activity_single_customer.xml
@@ -69,12 +69,12 @@
         android:layout_marginEnd="26dp"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="110dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/buttonViewAllPurchases"
-        android:layout_width="0dp"
+        android:id="@+id/buttonListOfAllGivenAmount"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:text="View All Purchases"
         tools:layout_constraintTop_creator="1"
@@ -89,7 +89,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAddPurchase" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonAddPurchase"
+        app:layout_constraintHorizontal_bias="0.023" />
 
     <TextView
         android:id="@+id/textView8"
@@ -238,25 +239,28 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Today Given AMT :"
         android:layout_marginStart="16dp"
+        android:text="Today Given AMT : Rs."
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextTodayGivenAMT"
+        app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintLeft_creator="1" />
 
     <EditText
         android:id="@+id/editTextTodayGivenAMT"
-        android:layout_width="146dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="110dp"
+        android:layout_width="114dp"
+        android:layout_height="46dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonAddPurchase"
+        android:inputType="number"
         app:layout_constraintLeft_toRightOf="@+id/textView12"
-        tools:layout_constraintBottom_creator="1" />
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="172dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLName"
+        android:layout_marginBottom="172dp" />
 
     <Button
         android:id="@+id/buttonOK"
@@ -268,9 +272,31 @@
         app:layout_constraintLeft_toRightOf="@+id/editTextTodayGivenAMT"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonViewAllPurchases"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonListOfAllGivenAmount"
         android:layout_marginTop="169dp"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        android:layout_marginBottom="169dp" />
+        android:layout_marginBottom="169dp"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="19dp"
+        android:text="view all given amount"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintLeft_toRightOf="@+id/buttonListOfAllGivenAmount"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAddPurchase"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
