--- a/app/src/main/res/layout/activity_single_purchase_details.xml
+++ b/app/src/main/res/layout/activity_single_purchase_details.xml
@@ -23,38 +23,38 @@
         android:id="@+id/textViewPurchaseId"
         android:layout_width="219dp"
         android:layout_height="0dp"
-        android:text="TextView"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textViewPurchaseDate"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/textViewPurchaseDate"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPurchaseDate"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textViewPurchaseAmount"
-        android:layout_width="195dp"
-        android:layout_height="49dp"
+        android:layout_width="157dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="11dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.947"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/textView14"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewPurchaseId"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
     <TextView
@@ -63,7 +63,6 @@
         android:layout_height="38dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="62dp"
-        android:text="Purchase ID : "
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
@@ -73,60 +72,18 @@
         android:id="@+id/textView14"
         android:layout_width="0dp"
         android:layout_height="52dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Purchase Amount :"
+        android:layout_marginTop="53dp"
+        android:text="Purchase Amount : Rs."
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textViewPurchaseId"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="51dp"
-        android:text="Amt Given Today :"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <EditText
-        android:id="@+id/editTextGivenToday"
-        android:layout_width="169dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="8dp"
-        android:ems="10"
-        android:hint="Rs."
-        android:inputType="number"
-        android:layout_marginTop="282dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView15"
-        android:layout_marginLeft="8dp" />
-
-    <Button
-        android:id="@+id/buttonOk"
-        android:layout_width="88dp"
-        android:layout_height="49dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="279dp"
-        android:text="OK"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/editTextGivenToday"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textView16"
@@ -147,52 +104,11 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="126dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="22dp"
-        android:text="BAKI Amount :"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/textView14"
-        app:layout_constraintRight_toLeftOf="@+id/textViewPurchaseAmount"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <TextView
-        android:id="@+id/textViewRemainingAmount"
-        android:layout_width="160dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginTop="21dp"
-        android:text="TextView"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/textViewPurchaseAmount"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="51dp"
-        app:layout_constraintRight_toRightOf="@+id/buttonListOfAllGivenAmount"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/textView16" />
-
-    <Button
-        android:id="@+id/buttonListOfAllGivenAmount"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginRight="7dp"
-        android:text="List  Of All Given Amount"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1" />
-
     <Button
         android:id="@+id/button6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="252dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="View Purchase list IMAGE"
@@ -203,5 +119,6 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
