--- a/app/src/main/res/layout/activity_single_purchase_details.xml
+++ b/app/src/main/res/layout/activity_single_purchase_details.xml
@@ -105,20 +105,20 @@
         tools:layout_constraintTop_creator="1" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btnViewPurchaseListImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="252dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="View Purchase list IMAGE"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        tools:layout_constraintRight_creator="1" />
 </android.support.constraint.ConstraintLayout>
